...
                                                <constraint firstAttribute="trailing" secondItem="WbO-W8-25L" secondAttribute="trailing" id="v6Q-38-3H4"/>
                                            </constraints>
                                        </collectionViewCellContentView>
                                        <size key="customSize" width="150" height="60"/>
                                        <connections>
                                            <outlet property="background" destination="WbO-W8-25L" id="OIG-hY-cKn"/>
                                            <outlet property="cityLabel" destination="zzr-BY-wXJ" id="XEW-0V-6iZ"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dpA-XC-kiL">
                                <rect key="frame" x="0.0" y="815" width="414" height="1"/>
...
                                                    <action selector="backButtonPressed:" destination="6dv-8n-cwv" eventType="touchUpInside" id="xCU-p3-Vgn"/>
                                                </connections>
                                            </button>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="JU5-ZB-vDD">
                                                <rect key="frame" x="0.0" y="27" width="141" height="63"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="City name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qen-Oz-npl">
                                                        <rect key="frame" x="0.0" y="0.0" width="141" height="43"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="City name"/>
                                                        <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="30"/>
                                                        <color key="textColor" name="OffWhite"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
...
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="P25-Id-cVF">
                                        <rect key="frame" x="334" y="0.0" width="40" height="90"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="79Q-YI-zcB">
                                                <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                                <color key="backgroundColor" name="OffWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="PinnedButton">
                                                    <accessibilityTraits key="traits" button="YES"/>
                                                </accessibility>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="KjA-N0-jOn"/>
                                                </constraints>
                                                <color key="tintColor" name="DarkishBlue"/>
...
                                                <connections>
                                                    <action selector="homeButtonPressed:" destination="6dv-8n-cwv" eventType="touchUpInside" id="hAF-r5-jEr"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vep-7p-PD8">
                                                <rect key="frame" x="109.5" y="0.0" width="23.5" height="27"/>
                                                <accessibility key="accessibilityConfiguration" identifier="pinnedList"/>
                                                <color key="tintColor" name="AccentGreen"/>
                                                <state key="normal">
                                                    <imageReference key="image" image="pin.fill" catalog="system" symbolScale="large"/>
                                                </state>
                                                <connections>
                                                    <action selector="pinButtonPressed:" destination="6dv-8n-cwv" eventType="touchUpInside" id="qgU-Ip-Z1l"/>
...
