...
                guard let cityName = response?.mapItems.first?.name else {
                    Alert.showBasicAlert(on: self, with: "City Not Found", message: "Please try again.")
                    return
                }
                let alert = UIAlertController(title: "View Details for\n\(cityName), \(self.stateName)?", message: nil, preferredStyle: .alert)
                let noButton = UIAlertAction(title: "Re-enter City", style: .default)
                let yesButton = UIAlertAction(title: "View City", style: .default) { _ in
                    self.cityName = cityName
                    self.city.cityName = cityName
                    self.city.cityState = self.stateName
                    self.city.longitude = (response?.boundingRegion.center.longitude)!
                    self.city.latitude = (response?.boundingRegion.center.latitude)!
                    self.controller.fetchCityData(city: self.city) { city in
...
