...
        }
        mapView.removeAnnotations(mapItems)
        mapItems = []
        tableView.reloadData()
        let request = MKLocalPointsOfInterestRequest(coordinateRegion: mapView.region)
        request.pointOfInterestFilter = MKPointOfInterestFilter(including: [category.category])
        let search = MKLocalSearch(request: request)
        search.start { (response, error) in
            guard let response = response else {
                Alert.showBasicAlert(on: self, with: "Sorry!", message: "Your search did not return any results. Try centering the map on the area you want to search")
                return
            }
            let items = response.mapItems
...
